apps/sm-java-test-repo-01/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sm-java-test-repo-01
  namespace: prod
  labels:
    app: sm-java-test-repo-01
    backstage.io/kubernetes-id: sm-java-test-repo-01
    environment: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sm-java-test-repo-01
  template:
    metadata:
      labels:
        app: sm-java-test-repo-01
        backstage.io/kubernetes-id: sm-java-test-repo-01
        environment: prod
    spec:
      containers:
        - name: sm-java-test-repo-01
          image: sureshmavp1/sm-java-test-repo-01:1.0.4
          ports:
            - containerPort: 8080
