apps/sm-java-test-repo-01/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sm-java-test-repo-01
  namespace: prod
  labels:
    backstage.io/kubernetes-id: sm-java-test-repo-01
    environment: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx  
  rules:
    - http:
        paths:
          - path: /sm-java-test-repo-01-prod(/|$)(.*) 
            pathType: ImplementationSpecific
            backend:
              service:
                name: sm-java-test-repo-01
                port:
                  number: 80
